Squashed commit of the following:
commit 38e6a4835788c64a8367e80494601e029b6c4bcc
Merge: 612bbeb 8acee41
Author: source123x <110315300+source123x@users.noreply.github.com>
Date:   Wed Jul 31 11:21:20 2024 -0400

    Merge branch 'main' of https://github.com/Cryptohawks8726/FRC-8726-2024

commit 612bbeba3557c64754d5a675e6b249250cd182de
Author: source123x <110315300+source123x@users.noreply.github.com>
Date:   Wed Jul 31 11:21:00 2024 -0400

    pre-camp demo changes made by trystan

commit 8acee41d3e06380ac1a012089d259801aa7475ee
Author: Venture-Capitalist <150748495+Venture-Capitalist@users.noreply.github.com>
Date:   Wed May 29 20:36:41 2024 -0400

    Update ShooterSubsystem.java

commit f4d301077e1ab966b2fafe4306123ec036d69f28
Author: Venture-Capitalist <150748495+Venture-Capitalist@users.noreply.github.com>
Date:   Tue May 28 18:01:33 2024 -0400

    Update ShooterSubsystem.java

commit 0d10699ef48002e169e8596a3bd08d9039bbe9b1
Merge: cd6ab11 4dd3b02
Author: neb465 <120420307+Neb465@users.noreply.github.com>
Date:   Tue May 28 15:44:29 2024 -0400

    Merge branch 'apriltags'

commit cd6ab11e7de68568436216efe1ce3e1507736b8a
Merge: 83cedb4 8b0ce2c
Author: n-valerio <51347399+n-valerio@users.noreply.github.com>
Date:   Thu Apr 11 16:00:52 2024 -0400

    Merge branch 'main' of https://github.com/Cryptohawks8726/FRC-8726-2024

commit 83cedb431fb3e4ab68d5ebf226143c1dfc82f9c0
Author: n-valerio <51347399+n-valerio@users.noreply.github.com>
Date:   Thu Apr 11 15:54:29 2024 -0400

    final comp changes?

commit db99c39e12f2905fd4bbb4cb39be30445ae19260
Author: n-valerio <51347399+n-valerio@users.noreply.github.com>
Date:   Sun Mar 24 13:38:55 2024 -0400

    MDOWI Pre-Elim changes

commit e16350e632d30de2a992acf1c1401b3f39091606
Author: n-valerio <51347399+n-valerio@users.noreply.github.com>
Date:   Sat Mar 23 07:39:18 2024 -0400

    Reduce slowmode speed to 2.1 m/s

commit 2b645b5d47a5c40eb4e98e03356889a7d4361dca
Author: n-valerio <51347399+n-valerio@users.noreply.gith

--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -6,7 +6,9 @@
     "New Folder",
     "New New Folder"
   ],
-  "autoFolders": [],
+  "autoFolders": [
+    "New Folder"
+  ],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 540.0,
