--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,10 @@ logs/
 
 # Folder that has CTRE Phoenix Sim device config storage
 ctre_sim/
+
+# Glass 
+.Glass/
+# DataLogTool
+.DataLogTool/
+
+networktables.json
